Regression: Custom normals data transfer modifier does not work #111898

Closed
opened 2023-09-03 21:14:01 +02:00 by Thomas Barlow · 7 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-26 17:27, hash: 234f866db237
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-15 18:34, hash: a1a08610b60f

Seems this is caused by 5e9ea9243b

Short description of error
The Data Transfer modifier when set to transfer Face Corner Data > Custom Normals often doesn't work or produces incorrect results.

Exact steps for others to reproduce the error

Modifier does not work
  1. Open the attached .blend (authored in 3.6.2).
  2. (optional) Click and drag to adjust the Mix Factor of the Data Transfer modifier on Cube.001 and observe the normals flickering as the value changes
3.6.2 4.0.0a
image image
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-26 17:27, hash: `234f866db237` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-15 18:34, hash: `a1a08610b60f` Seems this is caused by 5e9ea9243b33916e693c5a4b900bcaf214882a96 **Short description of error** The Data Transfer modifier when set to transfer Face Corner Data > Custom Normals often doesn't work or produces incorrect results. **Exact steps for others to reproduce the error** ##### Modifier does not work 1. Open the attached .blend (authored in 3.6.2). 1. (optional) Click and drag to adjust the Mix Factor of the Data Transfer modifier on `Cube.001` and observe the normals flickering as the value changes | 3.6.2 | 4.0.0a | | -- | -- | | ![image](/attachments/dce03f6d-2e1e-49bf-a6dd-91107b12bc19) | ![image](/attachments/7ee2be75-9524-4c10-8ba7-94ae9b49bfbc) |
Thomas Barlow added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-03 21:14:02 +02:00
Iliya Katushenock added the
Interest
Modeling
Interest
Modifiers
labels 2023-09-03 21:14:35 +02:00
Iliya Katushenock changed title from Custom normals data transfer does not work or crashes to Regression: Custom normals data transfer does not work or crashes 2023-09-03 21:14:42 +02:00

Hey, please, can you split this multi report and send one part as separate issues?

Hey, please, can you split this multi report and send one part as separate issues?
Author
Member

I would have thought both data transfer methods would run off of the same code, but ok.

I would have thought both data transfer methods would run off of the same code, but ok.

If these are duplicates, they will simply be merged.

If these are duplicates, they will simply be merged.
Thomas Barlow changed title from Regression: Custom normals data transfer does not work or crashes to Regression: Custom normals data transfer modifier does not work 2023-09-03 21:39:49 +02:00
Author
Member

The Transfer Mesh Data operator part has been separated into #111899

The Transfer Mesh Data operator part has been separated into https://projects.blender.org/blender/blender/issues/111899
Iliya Katushenock added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
Interest
Modeling
labels 2023-09-03 22:32:09 +02:00

I getting a crash in todat 4.0. Debug stack trace is attached.

I getting a crash in todat 4.0. Debug stack trace is attached.
Iliya Katushenock added
Priority
High
and removed
Priority
Normal
labels 2023-09-03 22:37:23 +02:00
Member

Seems this is caused by 5e9ea9243b

CC @HooglyBoogly (can have a quick look if I can spot something obvious)

Seems this is caused by 5e9ea9243b33916e693c5a4b900bcaf214882a96 CC @HooglyBoogly (can have a quick look if I can spot something obvious)
Member

Think I got it, will post a PR shortly

Think I got it, will post a PR shortly
Philipp Oeser self-assigned this 2023-09-06 16:39:52 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 16:55:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111898
No description provided.