Fix #111898: Custom normals data transfer modifier does not work

Mistake/typo in 5e9ea9243b (mixing up very similarly named variables -
leading to heap buffer overflow).

Pull Request: https://projects.blender.org/blender/blender/pulls/112037